# various

./: .gitignore  .pre-commit-config.yaml  README.md  data_getter.py  pylintrc  pyproject.toml
auxiliary/: latin_string.py  real_numbers.py
data/: data_getter.py
data_filter/: latin_string.py  real_numbers.py
docs/: CODEOWNERS  README.md  README.rst
example_usage/: example_recursive_fibonacci.py
examples/: pi_randomized_estimation.py
miscellaneous_python/: anagram.py  anagram_checker.py  anagrams.py  climbing_snail.py  comparison.ipynb  fibonacci_sequence.py  fizz_buzz.py  latin_letter_validator.py  latin_validator.py  numeral_persistence.py  pi_randomized_estimation.py  recursive_fibonacci.py  vigenere_cipher.py  zeckendorf.py  zeckendorf_representation.py
miscellaneous_python/type_hints/: basic_latin_letters.py
miscellaneous_python/under_construction/: fibonacci_sequence.py  recurring_decimal.py  zeckendorf.py
roman_numeral/: README.md  __init__.py  config.py  decoder_module.py  encoder_module.py
test/: test_anagram_checker.py  test_climbing_snail.py  test_fizz_buzz.py  test_vigenere_cipher.py  test_zeckendorf.py
tests/: shared_strategies.py  test_anagram.py  test_anagram_checker.py  test_anagrams.py  test_basic_latin_letters.py  test_climbing_snail.py  test_fizz_buzz.py  test_latin_string.py  test_latin_validator.py  test_real_numbers.py  test_vigenere_cipher.py  test_zeckendorf.py
tests/data_filter/: config.py  test_latin_string.py  test_real_numbers.py
tests/miscellaneous_python/: config.py  test_anagrams.py  test_vigenere_cipher.py
tests/test_data_filter/: test_latin_string.py
tests/test_miscellaneous_python/: config.py  test_anagrams.py  test_climbing_snail.py  test_recursive_fibonacci.py  test_vigenere_cipher.py
tests/test_roman_numeral/: test_roman_numeral.py
tests/test_type_hints/: test_latin_string.py  test_real_numbers.py
type_hints/: real_numbers.py
under_construction/: __init__.py  fibonacci_sequence.py  fizz_buzz.py  numeral_persistence.py  perfect_digital_invariant.py  pi_randomized_estimation.py  recurring_decimal.py  test_fizz_buzz.py  test_vigenere_cipher.py  test_zeckendorf.py  vigenere_cipher.py
various/: anagram_checker.py  anagram_mapping_checker.py  bac.py  brainfuck.py  bulls_and_cows.py  climbing_snail.py  climbing_snail_generalization.py  comparison.ipynb  contest_form.py  fibonacci_sequence.py  fizz_buzz.py  morse_code.py  numeral_persistence.py  pi_estimation_using_random_lib.py  pi_estimation_with_random.py  rock_paper_scissors.py  scripts_with_inputs.py  sieve_of_eratosthenes.py  vigenere_cipher.py  zeckendorf.py
various/application/: anagram_mapping_checker.py  brainfuck.py  bulls_and_cows_new.py  contest_form.py  fizz_buzz.py  numeral_persistence.py  pi_estimation_using_random_lib.py  sieve_of_eratosthenes.py  vigenere_cipher.py  zeckendorf.py
various/root/: fibonacci_sequence_related.py  inputs_related.py
