[tool.poetry]
authors = ["minhtrancccp <33189614+minhtrancccp@users.noreply.github.com>"]
description = "Compilation of my Python modules"
license = "GPL-3.0-or-later"
name = "miscellaneous-python"
readme = "./docs/README.md"
version = "1.0.0"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

beartype = { allow-prereleases = true, version = "^0.9.0" }
gmpy2 = { allow-prereleases = true, version = "^2.1.1" }
more-itertools = { allow-prereleases = true, version = "^8.8.0" }
numerary = { allow-prereleases = true, version = "^0.1.1" }
regex = { allow-prereleases = true, version = "^2021.9.24" }
sympy = { allow-prereleases = true, version = "^1.8" }

[tool.poetry.dev-dependencies]
black = { allow-prereleases = true, extras = ["jupyter"], version = "^21.11b1" }
codetiming = { allow-prereleases = true, version = "^1.3.0" }
commitizen = { allow-prereleases = true, version = "^2.18.1" }
coverage = { allow-prereleases = true, extras = ["toml"], version = "^6.0.2" }
hypothesis = { allow-prereleases = true, extras = ["cli", "codemods"], version = "^6.21.6" }
isort = { allow-prereleases = true, version = "^5.9.3" }
jupyter = { allow-prereleases = true, version = "^1.0.0" }
nbqa = { allow-prereleases = true, version = "^1.1.0" }
pre-commit = { allow-prereleases = true, version = "^2.15.0" }
prettytable = { allow-prereleases = true, version = "^2.1.0" }
pytest = { allow-prereleases = true, version = "^6.2.4" }
pytest-html = { allow-prereleases = true, version = "^3.1.1" }
pytest-randomly = { allow-prereleases = true, version = "^3.10.1" }
radon = { allow-prereleases = true, version = "^5.1.0" }

[tool.black]
target_version = ["py310"]

[tool.commitizen]
version = "1.0.0"
version_files = ["pyproject.toml"]

[tool.coverage.run]
branch = true
command_line = "-m pytest tests"
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
skip_empty = true
sort = "cover"

[tool.coverage.html]
show_contexts = true

[tool.isort]
multi_line_output = 3
profile = "black"

[tool.pytest.ini_options]
addopts = "--no-header --html=report.html --ignore=under_construction"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
